force-app/main/default/objects/CC_MCC__c/CC_MCC__c.object-meta.xml
<CustomObject>
    <description>Entidad para la administración del MCC.</description>
    <label>MCC</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCCs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>