force-app/main/default/objects/CC_MCC__c/fields/CBK_Traslado_Remitido__c.field-meta.xml
<CustomField>
    <fullName>CBK_Traslado_Remitido__c</fullName>
    <label>Trasladar/Remitir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traslado</fullName>
            </value>
            <value>
                <fullName>Remitido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>