force-app/main/default/objects/CC_MCC__c/fields/CC_Agrupacion_Tematica__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupacion_Tematica__c</fullName>
    <label>Agrupación Temática</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A- OPERACIONES DE ACTIVO</fullName>
            </value>
            <value>
                <fullName>B- OPERACIONES DE PASIVO</fullName>
            </value>
            <value>
                <fullName>C- INVERSIÓN</fullName>
            </value>
            <value>
                <fullName>D- SERVICIOS DE COBROS Y PAGOS</fullName>
            </value>
            <value>
                <fullName>E- CANALES</fullName>
            </value>
            <value>
                <fullName>F- SEGUROS Y PLANES DE PENSIONES</fullName>
            </value>
            <value>
                <fullName>G- PROGRAMAS, CONVENIOS Y COLECTIVOS</fullName>
            </value>
            <value>
                <fullName>H- OTROS SERVICIOS</fullName>
            </value>
            <value>
                <fullName>I- HERRAMIENTAS DE GESTIÓN</fullName>
            </value>
            <value>
                <fullName>J- SEGURIDAD OFICINAS Y CLIENTES</fullName>
            </value>
            <value>
                <fullName>K- COMERCIO EXTERIOR</fullName>
            </value>
            <value>
                <fullName>L- EMPLEADOS</fullName>
            </value>
            <value>
                <fullName>M- PUESTO DE TRABAJO Y SMARTPHONES</fullName>
            </value>
            <value>
                <fullName>N- HERRAMIENTAS PARA LA OFICINA</fullName>
            </value>
            <value>
                <fullName>O- CAMPAÑAS DE PRODUCTOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>