force-app/main/default/objects/CC_MCC__c/fields/CC_Alerta__c.field-meta.xml
<CustomField>
    <fullName>CC_Alerta__c</fullName>
    <description>Mostrar mensaje al realizar la operativa Oficina</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alerta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>