force-app/main/default/objects/CC_MCC__c/fields/CC_Alerta_Imagin__c.field-meta.xml
<CustomField>
    <fullName>CC_Alerta_Imagin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alerta Imagin</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>