force-app/main/default/objects/CC_MCC__c/fields/CC_Ambito_Tareas_Imagin__c.field-meta.xml
<CustomField>
    <fullName>CC_Ambito_Tareas_Imagin__c</fullName>
    <description>Campo utilizado para controlar a quien se manda la tarea del gestor en las cuentas imagin</description>
    <label>Ámbito derivación Imagin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amenazas empleados</fullName>
            </value>
            <value>
                <fullName>Amenazas suicidios</fullName>
            </value>
            <value>
                <fullName>Argos General</fullName>
            </value>
            <value>
                <fullName>Argos Xpays</fullName>
            </value>
            <value>
                <fullName>Bizum Fraude</fullName>
            </value>
            <value>
                <fullName>CaixaBank Talks</fullName>
            </value>
            <value>
                <fullName>Cajeros</fullName>
            </value>
            <value>
                <fullName>Cajeros Incidencias</fullName>
            </value>
            <value>
                <fullName>Cambio de gestor</fullName>
            </value>
            <value>
                <fullName>Cambio de oficina</fullName>
            </value>
            <value>
                <fullName>Caso a Fraude</fullName>
            </value>
            <value>
                <fullName>CSBD 3N</fullName>
            </value>
            <value>
                <fullName>CSBD Contratar</fullName>
            </value>
            <value>
                <fullName>CSBD No Contratar</fullName>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
            <value>
                <fullName>Hub Imagin</fullName>
            </value>
            <value>
                <fullName>No clientes</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Oficina física</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Phising/Smishing/Malware</fullName>
            </value>
            <value>
                <fullName>Testamentaría</fullName>
            </value>
            <value>
                <fullName>Ventas</fullName>
            </value>
            <value>
                <fullName>Vidacaixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>