force-app/main/default/objects/CC_MCC__c/fields/CC_Area_Responsable__c.field-meta.xml
<CustomField>
    <fullName>CC_Area_Responsable__c</fullName>
    <description>Campo para poder informar el área responsable del producto/servicio.</description>
    <label>Área responsable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00568 - C.O. AREA ORGANISMOS OFICIALES</fullName>
            </value>
            <value>
                <fullName>00569 - C.O. AREA DOMICILIACIONES</fullName>
            </value>
            <value>
                <fullName>1500 - CONTACT CENTER CLIENTS</fullName>
                <label>01500 - CONTACT CENTER CLIENTES</label>
            </value>
            <value>
                <fullName>02930 - UNIDAD DE PROMOTORES Y NEGOCIO HIPOTEC.</fullName>
            </value>
            <value>
                <fullName>05210 - Money to pay</fullName>
            </value>
            <value>
                <fullName>05521 - GESTION OPERATIVA LEASING</fullName>
            </value>
            <value>
                <fullName>5541 -CAIXABANK EQUIPAMENT FINANCE</fullName>
                <label>05541 - CAIXABANK EQUIPMENT FINANCE</label>
            </value>
            <value>
                <fullName>06201 - GESTION OPERATIVA FACTORING Y CONFIRMING</fullName>
            </value>
            <value>
                <fullName>9052 - COMUNIC,RELAC.INSTIT, MARCA Y R.S.C.</fullName>
                <label>09052 - COMUNIC,RELAC.INSTIT, MARCA Y R.S.C.</label>
            </value>
            <value>
                <fullName>9058 - CALIDAD Y VOZ DEL CLIENTE</fullName>
                <label>09058 - CALIDAD Y VOZ DEL CLIENTE</label>
            </value>
            <value>
                <fullName>9105 - RECURSOS HUMANOS Y ORGANIZACIÓN</fullName>
                <label>09105 - RECURSOS HUMANOS Y ORGANIZACION</label>
            </value>
            <value>
                <fullName>9261 - ASESORIA JURIDICA</fullName>
                <label>09261 - ASESORIA JURIDICA</label>
            </value>
            <value>
                <fullName>9266 - OBRA SOCIAL</fullName>
                <label>09266 - OBRA SOCIAL</label>
            </value>
            <value>
                <fullName>09271 - REESTRUCTURACIONES PARTICULARES</fullName>
            </value>
            <value>
                <fullName>9293 - MICROBANK</fullName>
                <label>09293 - SOPORTE RIESGOS MICROBANK</label>
            </value>
            <value>
                <fullName>9331 - POLITICAS Y PROCEDIMIENTOS DE ADMISION</fullName>
                <label>09331 - RETAIL RISK</label>
            </value>
            <value>
                <fullName>9383 - SECRETARIA TECNICA DE NEGOCIO</fullName>
                <label>09383 - SECRETARIA TECNICA DE NEGOCIO</label>
            </value>
            <value>
                <fullName>9386 - ANALISI DE GESTIO DE LA XARXA</fullName>
                <label>09386 - INFORMACION DE GESTION IGC</label>
            </value>
            <value>
                <fullName>09393 - RELACION CON INVERSORES</fullName>
            </value>
            <value>
                <fullName>9503 - MOROSIDAD</fullName>
                <label>09503 - UNIDAD RIESGOS REESTRUCTURACIONES EMPR.</label>
            </value>
            <value>
                <fullName>09504 - GESTION DE SERVICIOS GENERALES (Servihabitat)</fullName>
                <label>09504 - GESTION DE SERVICIOS GENERALES</label>
            </value>
            <value>
                <fullName>9507 - SEGURETAT</fullName>
                <label>09507 - SEGURIDAD</label>
            </value>
            <value>
                <fullName>9520 -BANCA DE PARTICULARES Y NEGOCIOS</fullName>
                <label>09520 - COMERCIALIZACION Y TRANSFORM. COMERCIAL</label>
            </value>
            <value>
                <fullName>09532 - GESTION DE EFECTIVO</fullName>
            </value>
            <value>
                <fullName>9542 - COSTUMER EXPERIENCE</fullName>
                <label>09542 - PARTICULARES</label>
            </value>
            <value>
                <fullName>9620 - BUSINESS INTELLIGENCE</fullName>
                <label>09620 - BUSINESS INTELLIGENCE</label>
            </value>
            <value>
                <fullName>9636 - CUMPLIMIENTO NORMATIVO</fullName>
                <label>09636 - CUMPLIMIENTO NORMATIVO</label>
            </value>
            <value>
                <fullName>9664 - BANCA PRIVADA I BANCA PREMIER</fullName>
                <label>09664 - BANCA PRIVADA</label>
            </value>
            <value>
                <fullName>9681 - ESTRATEGIA DE MARKETING</fullName>
                <label>09681 - ESTRATEGIA DE MARKETING</label>
            </value>
            <value>
                <fullName>EFICIENCIA Y DIGITALIZACION DE PROCESOS 09707</fullName>
                <label>09707 - EFICIENCIA Y DIGITALIZACION DE PROCESOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>