force-app/main/default/objects/CC_MCC__c/fields/CC_Canal_Operativo__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Operativo__c</fullName>
    <label>Canal Operativo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>App BrokerNow</fullName>
            </value>
            <value>
                <fullName>App CaixaBankPay</fullName>
            </value>
            <value>
                <fullName>App CaixaBankSign</fullName>
            </value>
            <value>
                <fullName>App CBKNow</fullName>
            </value>
            <value>
                <fullName>App Imagin</fullName>
            </value>
            <value>
                <fullName>App imaginKids</fullName>
            </value>
            <value>
                <fullName>App imaginTeens</fullName>
            </value>
            <value>
                <fullName>Cajero</fullName>
            </value>
            <value>
                <fullName>Cajero ATM NOW</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Otras App</fullName>
            </value>
            <value>
                <fullName>Plataforma virtual</fullName>
            </value>
            <value>
                <fullName>Portal CBK</fullName>
            </value>
            <value>
                <fullName>Portal Wivai</fullName>
                <label>Portal Facilitea</label>
            </value>
            <value>
                <fullName>RRSS</fullName>
            </value>
            <value>
                <fullName>Servicios Centrales</fullName>
            </value>
            <value>
                <fullName>Sin canal</fullName>
            </value>
            <value>
                <fullName>SmartPhone</fullName>
            </value>
            <value>
                <fullName>Web CBKNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>