force-app/main/default/objects/CC_MCC__c/fields/CC_Canal_Procedencia_Equivalente__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Procedencia_Equivalente__c</fullName>
    <inlineHelpText>Canal de procedencia a incorporar en la tipificación del caso</inlineHelpText>
    <label>Canal procedencia equivalente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_Procedencia</valueSetName>
    </valueSet>
</CustomField>