force-app/main/default/objects/CC_MCC__c/fields/CC_Canal_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Resolucion__c</fullName>
    <label>Canal de Resolucion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_resolucion</valueSetName>
    </valueSet>
</CustomField>