force-app/main/default/objects/CC_MCC__c/fields/CC_Categoria_Cognitivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Categoria_Cognitivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Categoría (Cognitivo)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>