force-app/main/default/objects/CC_MCC__c/fields/CC_Categoria_Hidden__c.field-meta.xml
<CustomField>
    <fullName>CC_Categoria_Hidden__c</fullName>
    <description>Campo Categoría de Cognitive para Conversión con Salesforce para Hidden.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Categoría</label>
    <length>100</length>
    <type>Text</type>
</CustomField>