force-app/main/default/objects/CC_MCC__c/fields/CC_Causa__c.field-meta.xml
<CustomField>
    <fullName>CC_Causa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Causa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Causa</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Soluciones</relationshipLabel>
    <relationshipName>CC_Soluciones</relationshipName>
    <type>Lookup</type>
</CustomField>