force-app/main/default/objects/CC_MCC__c/fields/CC_Clasif_Completa_Visible_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Clasif_Completa_Visible_Formula__c</fullName>
    <formula>CC_Producto_Servicio__r.CC_Tematica__r.Name + &apos; - &apos; + CC_Producto_Servicio__r.Name + &apos; - &apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clasificación completa</label>
    <type>Text</type>
</CustomField>