force-app/main/default/objects/CC_MCC__c/fields/CC_Clasificacion_Completa_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Clasificacion_Completa_Formula__c</fullName>
    <formula>LOWER(
    IF(
        RecordType.DeveloperName = &apos;CC_Motivo&apos;,
        CC_Producto_Servicio__r.CC_Tematica__r.Name + &apos; &apos; + CC_Producto_Servicio__r.Name + &apos; &apos; + Name,
        IF(
            RecordType.DeveloperName = &apos;CC_Producto_Servicio&apos;,
            CC_Tematica__r.Name + &apos; &apos; + Name,
            IF(
                RecordType.DeveloperName = &apos;SAC_Detalle&apos;,
                CC_Motivo__r.CC_Producto_Servicio__r.CC_Tematica__r.Name + &apos; &apos; + CC_Motivo__r.CC_Producto_Servicio__r.Name + &apos; &apos; + CC_Motivo__r.Name + &apos; &apos; + Name,
                IF(
                    RecordType.DeveloperName = &apos;SEG_Detalle&apos;,
                    CC_Motivo__r.CC_Producto_Servicio__r.CC_Tematica__r.Name + &apos; &apos; + CC_Motivo__r.CC_Producto_Servicio__r.Name + &apos; &apos; + CC_Motivo__r.Name + &apos; &apos; + Name,
				Name
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clasificación completa</label>
    <type>Text</type>
</CustomField>