force-app/main/default/objects/CC_MCC__c/fields/CC_Clasificacion_Rapida__c.field-meta.xml
<CustomField>
    <fullName>CC_Clasificacion_Rapida__c</fullName>
    <label>Clasificación rápida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHORRO</fullName>
            </value>
            <value>
                <fullName>AUXILIAR ONLINE</fullName>
            </value>
            <value>
                <fullName>BIZUM - BENEFICIARIO NO RECIBE IMPORTE</fullName>
            </value>
            <value>
                <fullName>BIZUM - INCIDENCIA</fullName>
            </value>
            <value>
                <fullName>CAIXABANK PAY</fullName>
            </value>
            <value>
                <fullName>COMPRAS POR INTERNET</fullName>
            </value>
            <value>
                <fullName>ENVÍO DE FICHEROS</fullName>
            </value>
            <value>
                <fullName>FONDOS</fullName>
            </value>
            <value>
                <fullName>IDENTIFICACIÓN - Acceso web</fullName>
            </value>
            <value>
                <fullName>IDENTIFICACIÓN - Acceso con app</fullName>
            </value>
            <value>
                <fullName>IDENTIFICACIÓN - Acceso con DNIe</fullName>
            </value>
            <value>
                <fullName>PLANES</fullName>
            </value>
            <value>
                <fullName>RECEPCIÓN DE FICHEROS</fullName>
            </value>
            <value>
                <fullName>SEGURIDAD - Accesos no reconocidos</fullName>
            </value>
            <value>
                <fullName>SEGURIDAD - Movimientos no reconocidos</fullName>
            </value>
            <value>
                <fullName>SEGURIDAD - PHISHING/TROYANO</fullName>
            </value>
            <value>
                <fullName>TRANSFERENCIAS</fullName>
            </value>
            <value>
                <fullName>VALORES</fullName>
            </value>
            <value>
                <fullName>BIZUM</fullName>
                <isActive>false</isActive>
                <label>BIZUM</label>
            </value>
            <value>
                <fullName>IDENTIFICACIÓN</fullName>
                <isActive>false</isActive>
                <label>IDENTIFICACIÓN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>