force-app/main/default/objects/CC_MCC__c/fields/CC_Codigo_Externo__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_Externo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código Externo</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>