force-app/main/default/objects/CC_MCC__c/fields/CC_ConvTematica__c.field-meta.xml
<CustomField>
    <fullName>CC_ConvTematica__c</fullName>
    <description>Nueva tipificación temática del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Nueva tipificación temática del caso</inlineHelpText>
    <label>Conversión temática</label>
    <length>50</length>
    <type>Text</type>
</CustomField>