force-app/main/default/objects/CC_MCC__c/fields/CC_Desviacion_Media_LV__c.field-meta.xml
<CustomField>
    <fullName>CC_Desviacion_Media_LV__c</fullName>
    <label>Desviación media de días laborales (L-V)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>