force-app/main/default/objects/CC_MCC__c/fields/CC_Desviacion_Media_SD__c.field-meta.xml
<CustomField>
    <fullName>CC_Desviacion_Media_SD__c</fullName>
    <label>Desviación media fin de semana (S-D)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>