force-app/main/default/objects/CC_MCC__c/fields/CC_Detalle__c.field-meta.xml
<CustomField>
    <fullName>CC_Detalle__c</fullName>
    <description>Campo para poder indicar el detalle.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalle</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>