force-app/main/default/objects/CC_MCC__c/fields/CC_Equivalencia_Formulario__c.field-meta.xml
<CustomField>
    <fullName>CC_Equivalencia_Formulario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Clasificación externa</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>