force-app/main/default/objects/CC_MCC__c/fields/CC_Espacio_Cognitivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Espacio_Cognitivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Espacio (Cognitivo)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>