force-app/main/default/objects/CC_MCC__c/fields/CC_Espacio_Hidden__c.field-meta.xml
<CustomField>
    <fullName>CC_Espacio_Hidden__c</fullName>
    <description>Campo Espacio de Cognitive para Conversión con Salesforce para Hidden.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Espacio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>