force-app/main/default/objects/CC_MCC__c/fields/CC_Fecha_Vigencia_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Vigencia_Inicio__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Fecha de inicio de vigencia</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inicio vigencia</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>