force-app/main/default/objects/CC_MCC__c/fields/CC_GDPR__c.field-meta.xml
<CustomField>
    <fullName>CC_GDPR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Habilita la operativa de GDPR.</description>
    <label>GDPR</label>
    <type>Checkbox</type>
</CustomField>