force-app/main/default/objects/CC_MCC__c/fields/CC_Id_SDOC_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_SDOC_Plantilla__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id de la Plantilla SDOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>