force-app/main/default/objects/CC_MCC__c/fields/CC_idCognitivo__c.field-meta.xml
<CustomField>
    <fullName>CC_idCognitivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enlace encuesta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>