force-app/main/default/objects/CC_MCC__c/fields/CC_ImpedirClienteDigital__c.field-meta.xml
<CustomField>
    <fullName>CC_ImpedirClienteDigital__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para definir qué motivos no se permite hacer autenticación de Cliente Digital.</description>
    <label>Impedir Cliente Digital</label>
    <type>Checkbox</type>
</CustomField>