force-app/main/default/objects/CC_MCC__c/fields/CC_ImpedirNivel2__c.field-meta.xml
<CustomField>
    <fullName>CC_ImpedirNivel2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para definir qué motivos no se permite hacer autenticación de Nivel 2.</description>
    <label>Impedir Nivel 2</label>
    <type>Checkbox</type>
</CustomField>