force-app/main/default/objects/CC_MCC__c/fields/CC_MCCWeb_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CC_MCCWeb_Motivo__c</fullName>
    <description>Código de motivo de los formularios web</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Código de motivo de los formularios web</inlineHelpText>
    <label>Motivo Web</label>
    <length>3</length>
    <type>Text</type>
</CustomField>