force-app/main/default/objects/CC_MCC__c/fields/CC_MCCWeb_Origen__c.field-meta.xml
<CustomField>
    <fullName>CC_MCCWeb_Origen__c</fullName>
    <description>Código de origen del formulario web</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Código de origen del formulario web</inlineHelpText>
    <label>Origen Web</label>
    <length>3</length>
    <type>Text</type>
</CustomField>