force-app/main/default/objects/CC_MCC__c/fields/CC_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motivo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>C - Motivo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Causas</relationshipLabel>
    <relationshipName>CC_MCC_Causas</relationshipName>
    <type>Lookup</type>
</CustomField>