force-app/main/default/objects/CC_MCC__c/fields/CC_Motivo_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_Formula__c</fullName>
    <formula>CC_Causa__r.CC_Motivo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motivo</label>
    <type>Text</type>
</CustomField>