force-app/main/default/objects/CC_MCC__c/fields/CC_Motivo_NOK__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_NOK__c</fullName>
    <label>Motivo NOK</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Motivo_NOK</valueSetName>
    </valueSet>
</CustomField>