force-app/main/default/objects/CC_MCC__c/fields/CC_Motivo_OmitirSMSNivel2__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_OmitirSMSNivel2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omitir SMS Nivel 2</label>
    <type>Checkbox</type>
</CustomField>