force-app/main/default/objects/CC_MCC__c/fields/CC_Notificar__c.field-meta.xml
<CustomField>
    <fullName>CC_Notificar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Al tener esta casilla marcada, se mostrará el registro en lista de notificación en Inicio cuando su fecha de inicio de vigencia corresponda.</inlineHelpText>
    <label>Notificar</label>
    <type>Checkbox</type>
</CustomField>