force-app/main/default/objects/CC_MCC__c/fields/CC_Omitir_preguntas_Nivel_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Omitir_preguntas_Nivel_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para parametrizar si hay que saltear o no las preguntas de Nivel 2</description>
    <label>Omitir preguntas Nivel 2</label>
    <type>Checkbox</type>
</CustomField>