force-app/main/default/objects/CC_MCC__c/fields/CC_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>CC_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para poder mostrar el botón de la operativa de Onboarding si aplica para el MCC.</description>
    <label>Onboarding</label>
    <type>Checkbox</type>
</CustomField>