force-app/main/default/objects/CC_MCC__c/fields/CC_Permitir_traslado_2_oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Permitir_traslado_2_oficina__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitir traslado a 2ª oficina</label>
    <type>Checkbox</type>
</CustomField>