force-app/main/default/objects/CC_MCC__c/fields/CC_Plantilla_SDoc__c.field-meta.xml
<CustomField>
    <fullName>CC_Plantilla_SDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación con las plantillas de S-Docs</description>
    <label>Plantilla SDoc</label>
    <referenceTo>SDOC__SDTemplate__c</referenceTo>
    <relationshipLabel>MCCs</relationshipLabel>
    <relationshipName>MCCs</relationshipName>
    <type>Lookup</type>
</CustomField>