force-app/main/default/objects/CC_MCC__c/fields/CC_Plazo__c.field-meta.xml
<CustomField>
    <fullName>CC_Plazo__c</fullName>
    <label>Plazo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>