force-app/main/default/objects/CC_MCC__c/fields/CC_Producto_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Producto_Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para poder seleccionar un producto/servicio.</description>
    <label>Producto/Servicio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>B - Producto/Servicio</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Motivos</relationshipLabel>
    <relationshipName>CC_MCC_Motivos</relationshipName>
    <type>Lookup</type>
</CustomField>