force-app/main/default/objects/CC_MCC__c/fields/CC_Producto_Servicio_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Producto_Servicio_Formula__c</fullName>
    <formula>CASE(RecordType.DeveloperName, &apos;CC_Motivo&apos;, CC_Producto_Servicio__r.Name, &apos;CC_Producto_Servicio&apos;, Name,CC_Motivo__r.CC_Producto_Servicio__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto/Servicio</label>
    <type>Text</type>
</CustomField>