force-app/main/default/objects/CC_MCC__c/fields/CC_Susceptible_de_Fraude__c.field-meta.xml
<CustomField>
    <fullName>CC_Susceptible_de_Fraude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se crea checkbox para US450477 poder marcar si el MCC es  susceptible de fraude</description>
    <label>Susceptible de Fraude</label>
    <type>Checkbox</type>
</CustomField>